# QDng

./: .gitignore  AUTHORS  CITATION.cff  ChangeLog  Doxyfile  Makefile.am  QDng.kdevelop  README  README.md  RoadMap  acx_blas.m4  acx_fftw3.m4  acx_libxml2.m4  ax_check_zlib.m4  ax_openmp.m4  codemeta.json  configure  configure.in  configure.txt  default.nix  flake.nix  genbs  matlab.m4  package.nix  qdng.cpp  qdng.kdevelop  qdng.kdevelop.pcs
doc/: Handbook.tex  Makefile.am  qdng.bib
doc/tutorial/: efs.qds  example_1_qd_setup_input.m  example_2_qd_check_efs.m  example_3_qd_setup_propa.m  example_4_qd_check_propa.m  propa.qds
src/: Autokorr.cpp  ChainLoader.cpp  ChainLoader.h  CmdHandler.cpp  CmdHandler.h  FiltersList.cpp  FiltersList.h  GlobalOpList.cpp  GlobalOpList.h  GlobalWFList.cpp  GlobalWFList.h  IACmds.pb.cc  IACmds.pb.h  IACmds.proto  Makefile  Makefile.am  Makefile.in  ProgAutocorr.cpp  ProgAutocorr.h  ProgCfun.cpp  ProgCfun.h  ProgEigen.cpp  ProgEigen.h  ProgFilter.cpp  ProgFilter.h  ProgOCT.cpp  ProgOCT.h  ProgPropa.cpp  ProgPropa.h  Reporter.cpp  Reporter.h  libqdng.cpp  qdng.cpp  qdng_info.cpp  qdz.cpp  simpleXml.l  simpleXml.y  test_Nabla.cpp  test_SPO.cpp  test_WFGrid.cpp  (+3 more)
src/fft/: FFTGlobal.cpp  FFTGlobal.h  Makefile  Makefile.am  Makefile.in  fft.cpp  fft.h
src/fftw/: submission.html
src/ideas/: FileSingleC.h  Grid1D.h  GridOperator.h  ODiag.h  SpatialGrid.h  WFCartesian1D.cpp  WFCartesian1D.h
src/lib/: Makefile.am  libqdng.cpp
src/linalg/: Bessel.cpp  Bessel.h  LapackDiag.cpp  LapackDiag.h  Makefile.am  lapack_double.h  lapack_rs.cpp  lapack_rs.h
src/math/: Makefile.am  Makefile.in  Matrix.h  Vector.h  VectorPrimitives.h  VectorPrimitives.h.orig  VectorView.h  cplx_sse2.h  dcomplex.cpp  dcomplex.h  gencodlets.sh  m128dc.cpp  m128dc.h  m256dc.cpp  m256dc.h  math_functions.cpp  math_functions.h  tnt_extensions.h  typedefs.h
src/matlab/: Makefile.am  get_global_params.m  pb_descriptor_QDLIB__Command.m  pb_descriptor_QDLIB__FileSingleHeader.m  pb_descriptor_QDLIB__GridSystemHeader.m  pb_descriptor_QDLIB__GridSystemHeader__dim_description_t.m  pb_descriptor_QDLIB__MultiStateIdentifier.m  pb_descriptor_QDLIB__Response.m  pb_read_QDLIB__Command.m  pb_read_QDLIB__FileSingleHeader.m  pb_read_QDLIB__GridSystemHeader.m  pb_read_QDLIB__GridSystemHeader__dim_description_t.m  pb_read_QDLIB__MultiStateIdentifier.m  pb_read_QDLIB__Response.m  pblib_create_message.m  qd_cfun_TA_spectrum.m  qd_cmd_apply_op.m  qd_cmd_clear_objects.m  qd_cmd_expec.m  qd_cmd_load_op.m  qd_cmd_matel.m  qd_cmd_quit.m  qd_cmd_xml.m  qd_convert_complex_to_uint8.m  qd_convert_double_to_uint8.m  qd_convert_grid_meta_to_pb.m  qd_convert_to_complex.m  qd_decode_Laser.m  qd_decode_OGridSystem.m  qd_decode_WF.m  qd_decode_WFGridCartesian.m  qd_decode_WFLevel.m  qd_decode_WFMultistate.m  qd_encode_Laser.m  qd_encode_OGridSystem.m  qd_encode_WF.m  qd_encode_WFGridCartesian.m  qd_encode_WFLevel.m  qd_encode_WFMultistate.m  qd_get_global_params.m  (+20 more)
src/mex/: Collector.cpp  Collector.h  Makefile.am  ObjectHandle.cpp  ObjectHandle.h  PeakFinder.cpp  PeakFinder.m  QDParams.cpp  QDParams.m  QDReadMeta.cpp  QDReadMeta.m  QDWriteMeta.cpp  QDWriteMeta.m  apply_op.cpp  apply_op.m  convert_to_mxArray.cpp  convert_to_mxArray.h  convert_wf_mxArray.cpp  debugreadwf.cpp  delete_op_handle.cpp  delete_op_handle.m  delete_wf_handle.cpp  delete_wf_handle.m  expec_op.cpp  expec_op.m  get_all_op_handle.cpp  get_all_op_handle.m  get_all_wf_handle.cpp  get_all_wf_handle.m  get_data_wf_from_handle.cpp  get_wf_handle.cpp  get_wf_handle.m  init_op.cpp  init_op.m  init_wf_file.cpp  init_wf_file.h  init_wf_file.m  init_wf_struct.cpp  init_wf_struct.m  mextest.cpp  (+10 more)
src/modules/: InternalMods.cpp  InternalMods.h  Makefile.am  Mod_WFGrid1D.cpp  Module.h  ModuleLoader.cpp  ModuleLoader.h  mod-OCheby.cpp  mod-OFlux.cpp  mod-OGSPO.cpp  mod-OGobbler.cpp  mod-OGridDipole.cpp  mod-OGridGMat.cpp  mod-OGridHOFD.cpp  mod-OGridKick.cpp  mod-OGridNAC.cpp  mod-OGridNabla.cpp  mod-OGridNablaSq.cpp  mod-OGridPML.cpp  mod-OGridPosition.cpp  mod-OGridPotential.cpp  mod-OGridRaman.cpp  mod-OGridSum.cpp  mod-OHermitianMatrix.cpp  mod-OMatDipole.cpp  mod-OMultistate.cpp  mod-ORK4.cpp  mod-OSIL.cpp  mod-OSOD.cpp  mod-OSPO.cpp  mod-WFGridCartesian.cpp
src/qdlib/: Butterworth.h  Conversion.h  Diff.cpp  Diff.h  FileWF.cpp  FileWF.h  GridSystem.cpp  GridSystem.h  GridSystem.pro  GridSystem.pro.pb.cc  GridSystem.pro.pb.h  HOFD.cpp  HOFD.h  InternalMods.cpp  InternalMods.h  Kspace.cpp  Kspace.h  Laser.cpp  Laser.h  Makefile.am  Makefile.in  Makefile.old  ModuleLoader.cpp  ModuleLoader.h  OArnoldi.cpp  OArnoldi.h  OCheby.cpp  OCheby.h  ODMultistate.cpp  ODMultistate.h  ODSpace.h  OFlux.cpp  OFlux.h  OGSPO.cpp  OGSPO.h  OGobbler.cpp  OGobbler.h  OGrid1Dd2dx.cpp  OGrid1Dd2dx.h  OGridDipole.cpp  (+99 more)
src/simpleXml/: Makefile.am  Simple2Xml.cpp  Simple2Xml.h  SyntacticTreeModel.h  grammar.yy  qds2qdi.cpp  simpleXml.ll
src/slatec/: Makefile.am  Makefile.in  README
src/sys/: Exception.cpp  Exception.h  FileSet.h  FileSingle.h  FileSingleDefs.h  Getopt.cpp  Getopt.h  KeyValFile.cpp  KeyValFile.h  Logger.cpp  Logger.h  Makefile  Makefile.am  Makefile.in  ParamContainer.cpp  ParamContainer.h  QDClock.cpp  QDClock.h  QDGlobalClock.cpp  QDGlobalClock.h  XmlNode.cpp  XmlNode.h  XmlParser.cpp  XmlParser.h  helpers.cpp  helpers.h  test_Exeption.cpp  test_compile.cpp  test_file.cpp  (+2 more)
tests/: GridDip0.op  GridDip01.op  GridGM_00.op  GridGauss.wf  GridLaser_IR.op  GridLaser_w0.00713.op  GridLaser_w0.176.op  GridPot0.op  GridPot0_ef_0.wf  GridPot0_ef_1.wf  GridPot0_ef_2.wf  GridPot0_ef_3.wf  GridPot1.op  GridShapeIR.op  GridShapeUV.op  LevelCmat.op  LevelDIPmat.op  LevelH2mat.op  LevelHmat.op  LevelLaser_w0.15.op  Level_ef_0.wf  Level_ef_1.wf  Makefile.am  ShapeLevel.op  TGE-Arnoldi.qdi.in  TGE-Cheby.qdi  TGE-Cheby.qdi.in  TGE-GSPO.qdi  TGE-GSPO.qdi.in  TGE-SIL.qdi  TGE-SIL.qdi.in  TGE-SPO.qdi  TGE-SPO.qdi.in  TGO-IR-Freq.qdi.in  TGO-IR-Krotov-Projection.qdi.in  TGO-IR-Krotov.qdi.in  TGO-IR-Rabitz.qdi.in  TGO-UV-Krotov.qdi.in  TGP-Expec-HOFD.qdi.in  TGP-Expec-SP.qdi  (+24 more)
(+295 files in other folders)
