AC_INIT
AC_CONFIG_SRCDIR([configure.in])

AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE([QDng], [alpha-0.5.2])

AC_LANG([C++])
AC_PROG_CXX
AC_PROG_F77

AM_PROG_LIBTOOL

dnl Check for standard functions
AC_CHECK_FUNCS([pow],,AC_MSG_ERROR(power function not found))
AC_CHECK_FUNCS([sqrt],,AC_MSG_ERROR(sqrt function not found))
AC_CHECK_FUNCS([mkdir],,AC_MSG_ERROR(mkdir function not found))
AC_C_INLINE
AC_HEADER_STDBOOL
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_TYPE_SIZE_T
AC_TYPE_MODE_T


dnl
dnl Matlab Library
dnl
sinclude([mex_init.m4])
sinclude([matlab.m4])
MEX_INIT([MEX],[1],[1],[2])
CHECK_MATLAB

dnl
dnl OpenMP
dnl
sinclude([ax_openmp.m4])
AC_ARG_ENABLE([openmp],
	      [AS_HELP_STRING([--enable-openmp],[Enable OpenMP parallelization])],
	      [AX_OPENMP(enable_openmp=yes,AC_MSG_ERROR(Compiler doesn't provide OpenMP))])

AM_CONDITIONAL([HAVE_OPENMP],[test "x$enable_openmp"=="xyes"] )


AC_ARG_ENABLE([sse2],
	      [AS_HELP_STRING([--enable-sse2],[Explictly enable SSE2 optimizations])],
	      AC_DEFINE([HAVE_SSE2], [1], [Explictly enable SSE2 optimizations]))

dnl zlib
sinclude([ax_check_zlib.m4])
AX_CHECK_ZLIB()


dnl libxml2
sinclude([acx_libxml2.m4])
ACX_CHECK_LIBXML2

dnl fftw3
dnl sinclude([acx_fftw3.m4])
dnl ACX_FFTW3

dnl blas/lapack
sinclude([acx_blas.m4])
sinclude([acx_lapack.m4])
ACX_BLAS(,AC_MSG_ERROR(BLAS libs are missing/not working))
ACX_LAPACK(,AC_MSG_ERROR(LAPACK is missing/not working))


dnl Configure C/F77 mixed mode (RT libs)
AC_F77_LIBRARY_LDFLAGS
AC_F77_WRAPPERS


AC_ARG_ENABLE([mods],
	      [AS_HELP_STRING([--enable-mods],[Enable dynamic loadable modules])],
	      AC_DEFINE([USE_DYNMODS], [1], [Enable dynamic loadable modules]))


dnl AC_ARG_ENABLE([mpi],
dnl	    [AS_HELP_STRING([--enable-mpi],[Build with support for mpi parallization])],
dnl	    [],enable_mpi=no)

dnl AC_ARG_WITH([mpi-prefix],
dnl	    [AS_HELP_STRING([--with-mpi-prefix=PATH],[Prefix of the mpi installation])],
dnl	    [],with_mpi-prefix=no)

AC_CONFIG_SUBDIRS([src/fftw/])


AC_CONFIG_FILES([Makefile src/Makefile src/qdlib/Makefile src/tools/Makefile src/fft/Makefile src/math/Makefile src/modules/Makefile src/tests/Makefile src/slatec/Makefile src/linalg/Makefile src/lib/Makefile src/mex/Makefile src/mex/libs/Makefile tests/Makefile])

AC_ARG_WITH([cppunit], 
      [AS_HELP_STRING([--with-cppunit], [Enable CppUnit tests])],
      [with_cppunit=yes],
      [with_cppunit=no])

AM_CONDITIONAL([CPPUNIT], [test "x$with_cppunit" != "xno"])
     
AC_OUTPUT
