dist_pkgdata_DATA = get_global_params.m \
 	pb_descriptor_QDLIB__Command.m \
 	pb_descriptor_QDLIB__FileSingleHeader.m \
 	pb_descriptor_QDLIB__GridSystemHeader__dim_description_t.m \
 	pb_descriptor_QDLIB__GridSystemHeader.m \
 	pb_descriptor_QDLIB__MultiStateIdentifier.m \
 	pb_descriptor_QDLIB__Response.m \
 	pblib_create_message.m \
 	pblib_encoded_field_size.m \
 	pblib_encoded_tag_size.m \
 	pblib_encoded_varint_size.m \
 	pblib_generic_parse_from_string.m \
 	pblib_generic_serialize_to_string.m \
 	pblib_get_serialized_size.m \
 	pblib_helpers_first.m \
 	pblib_helpers_iff.m \
 	pblib_matlab_type_to_string.m \
 	pblib_read_tag.m \
 	pblib_read_varint32.m \
 	pblib_read_varint64.m \
 	pblib_read_wire_type.m \
 	pblib_set.m \
 	pblib_type_to_estimated_encoded_length.m \
 	pblib_write_tag.m \
 	pblib_write_varint.m \
 	pblib_write_wire_type.m \
 	pb_read_QDLIB__Command.m \
 	pb_read_QDLIB__FileSingleHeader.m \
 	pb_read_QDLIB__GridSystemHeader__dim_description_t.m \
 	pb_read_QDLIB__GridSystemHeader.m \
 	pb_read_QDLIB__MultiStateIdentifier.m \
 	pb_read_QDLIB__Response.m \
 	qd_cmd_apply_op.m \
 	qd_cmd_expec.m \
 	qd_cmd_load_op.m \
 	qd_cmd_matel.m \
 	qd_cmd_quit.m \
 	qd_cmd_xml.m \
 	qd_convert_complex_to_uint8.m \
 	qd_convert_double_to_uint8.m \
 	qd_convert_grid_meta_to_pb.m \
 	qd_convert_to_complex.m \
 	qd_decode_Laser.m \
 	qd_decode_OGridSystem.m \
 	qd_decode_WFGridCartesian.m \
 	qd_decode_WFLevel.m \
 	qd_encode_Laser.m \
 	qd_encode_OGridSystem.m \
 	qd_encode_WFGridCartesian.m \
 	qd_encode_WFLevel.m \
 	qd_encode_WF.m \
 	qd_get_global_params.m \
 	qd_get_socket.m \
 	qd_get_stream_intro.m \
 	qd_handle_response.m \
 	qd_int.m \
 	qd_read_op.m \
 	qd_read_stream.m \
 	qd_read_wf.m \
 	qd_set_global_params.m \
 	qd_tests.m \
 	qd_view_wf.m \
 	qd_wf_to_stream.m \
 	qd_write_cmd.m \
 	qd_write_op.m \
 	qd_write_wf.m
	qd_cfun_TA_spectrum.m \
        qd_decode_WF.m \
        qd_encode_WF.m \
        qdlib_read_params.m \
        qd_view_efs.m \
        qlib_zlib_compress.m \
        qd_cmd_clear_objects.m \
        qd_decode_WFMultistate.m \
        qd_encode_WFMultistate.m \
        qd_read_Ctt.m \
        qd_view_propagation.m \
        qlib_zlib_decompress.m

